WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173950
REGRESSION (
r218842
): com.apple.WebKit crash in WebKit::ProcessLauncher::launchProcess
https://bugs.webkit.org/show_bug.cgi?id=173950
Summary
REGRESSION (r218842): com.apple.WebKit crash in WebKit::ProcessLauncher::laun...
Ryosuke Niwa
Reported
2017-06-28 18:35:48 PDT
I'm missing a null check.
Attachments
Fixes the bug
(1.58 KB, patch)
2017-06-28 18:41 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixes the bug
(1.60 KB, patch)
2017-06-28 18:47 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2017-06-28 18:36:08 PDT
<
rdar://problem/33043010
>
Ryosuke Niwa
Comment 2
2017-06-28 18:41:06 PDT
Created
attachment 314083
[details]
Fixes the bug
Chris Dumez
Comment 3
2017-06-28 18:42:30 PDT
Comment on
attachment 314083
[details]
Fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=314083&action=review
> Source/WebKit2/UIProcess/Launcher/mac/ProcessLauncherMac.mm:204 > + if (m_xpcConnection)
Should this be processLauncher->m_xpcConnection ?
Ryosuke Niwa
Comment 4
2017-06-28 18:47:14 PDT
Created
attachment 314084
[details]
Fixes the bug
Ryosuke Niwa
Comment 5
2017-06-28 18:47:50 PDT
(In reply to Chris Dumez from
comment #3
)
> Comment on
attachment 314083
[details]
> Fixes the bug > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=314083&action=review
> > > Source/WebKit2/UIProcess/Launcher/mac/ProcessLauncherMac.mm:204 > > + if (m_xpcConnection) > > Should this be processLauncher->m_xpcConnection ?
Yup. Fixed.
Ryosuke Niwa
Comment 6
2017-06-28 19:56:24 PDT
Comment on
attachment 314084
[details]
Fixes the bug Clearing flags on attachment: 314084 Committed
r218911
: <
http://trac.webkit.org/changeset/218911
>
Ryosuke Niwa
Comment 7
2017-06-28 19:56:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug