REGRESSION (r218842): com.apple.WebKit crash in WebKit::ProcessLauncher::launchProcess https://bugs.webkit.org/show_bug.cgi?id=173950

Reviewed by Chris Dumez.

Added a null check as m_xpcConnection could be nullptr here in the case platformInvalidate had been called.

* UIProcess/Launcher/mac/ProcessLauncherMac.mm:
(WebKit::ProcessLauncher::launchProcess):


Canonical link: https://commits.webkit.org/190787@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218911 268f45cc-cd09-0410-ab3c-d52691b4dbfc